--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
         with:
@@ -23,16 +23,26 @@ jobs:
 
       - name: Build
         run: hugo
+        
+      - name: rsync deployments
+      # You may pin to the exact commit or the version.
+        # uses: contention/rsync-deployments@10f98a8726e6760601d8818ea6ff812f87bf8a97
+        uses: contention/rsync-deployments@v2.0.0
+        with:
+          # Initial/required rsync flags
+          flags: -avz --delete
+          # Exclude flags and directory pairs
+          excludes: ""
+          # The server user
+          user: ${{ secrets.USERNAME }}
+          # The deployment target
+          host: ${{ secrets.SERVER_IP }}:${{ secrets.SERVER_PORT }}
+          # The local path to sync
+          localpath: "/public"
+          # The remote path to sync
+          remotepath: ${{ secrets.SERVER_DESTINATION }}
+          # The private key
+          deploy_key: ${{ secrets.SERVER_SSH_KEY }}
 
-      - name: Deploy using rsync
-        uses: AEnterprise/rsync-deploy@v1.0
-        env:
-          DEPLOY_KEY: ${{ secrets.SERVER_SSH_KEY }}
-          ARGS: "-avz --delete"
-          SERVER_PORT: ${{ secrets.SERVER_PORT }}
-          FOLDER: "./public"
-          SERVER_IP: ${{ secrets.SERVER_IP }}
-          USERNAME: ${{ secrets.USERNAME }}
-          SERVER_DESTINATION: ${{ secrets.SERVER_DESTINATION }}
           
         
