--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,24 +24,33 @@ jobs:
       - name: Build
         run: hugo
         
-      - name: rsync deployments
-      # You may pin to the exact commit or the version.
-        # uses: contention/rsync-deployments@10f98a8726e6760601d8818ea6ff812f87bf8a97
-        uses: D3rHase/rsync-deploy-action@v0.2
+
+      - name: SFTP Deploy
+        # You may pin to the exact commit or the version.
+        # uses: wlixcc/SFTP-Deploy-Action@da88a4dbe95286266bbac3c0b2b8284048d20c8f
+        uses: wlixcc/SFTP-Deploy-Action@v1.2.4
         with:
-          # Initial/required rsync flags
-          # flags: -avz --delete
-          # The server user
-          USER: ${{ secrets.USERNAME }}
-          # The deployment target
-          HOST: ${{ secrets.SERVER_IP }}
-          PORT: ${{ secrets.SERVER_PORT }}
-          # The local path to sync
-          REPOSITORY_PATH: "/public"
-          # The remote path to sync
-          SERVER_PATH: ${{ secrets.SERVER_DESTINATION }}
-          # The private key
-          PRIVATE_SSH_KEY: ${{ secrets.SERVER_SSH_KEY }}
+          # username
+          username: ${{ secrets.USERNAME }}
+          # your sftp server
+          server: ${{ secrets.SERVER_IP }}
+          # your sftp server port, default to 22
+          port: ${{ secrets.SERVER_PORT }}
+          # you can copy private_key from your *.pem file, keep format
+          ssh_private_key: ${{ secrets.SERVER_SSH_KEY }}
+          # will put all file under this path
+          local_path: "/public"
+          # files will copy to under remote_path
+          remote_path: ${{ secrets.SERVER_DESTINATION }}
+          # connection via sftp protocol only
+          #sftp_only: # optional
+          # sftp args
+          #sftpArgs: # optional
+          # This operation will delete all files in the remote path before upload. Please be careful set this to true
+          #delete_remote_files: # optional
+          # SSH passsword，If a password is set, the secret key pair is ignored
+          #password: # optional
+          
 
           
         
