--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
           # you can copy private_key from your *.pem file, keep format
           ssh_private_key: ${{ secrets.SERVER_SSH_KEY }}
           # will put all file under this path
-          local_path: "/public"
+          local_path: "./public/*"
           # files will copy to under remote_path
           remote_path: ${{ secrets.SERVER_DESTINATION }}
           # connection via sftp protocol only
